stop menu toggle from floating behind admin bar (fix #9)

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -118,6 +118,7 @@ h1 {
 	overflow: hidden;
 	background: $background--dark;
 	padding: 0 0 15px;
+	position: relative;
 }
 
 .bies__image {
